#############################################################################
##
#W  id960.gn               GAP library of id's             Hans Ulrich Besche
##

ID_GROUP_TREE.next[960].next[196]:=
rec(
  fp:= [ 10204, 44104 ],
  next:= [ rec(
    fp:= [ 2618, 3288, 4510, 5013, 5790, 6757, 8187, 9846, 13521, 13571, 
16394, 20137, 20720, 22760, 26868, 27155, 33075, 33754, 35046, 41485, 41535, 
45337, 49881, 50794, 55628, 59069, 60172, 62300, 64569, 64589, 66346, 70900, 
72808, 74418, 77487, 79310, 84700, 84709, 84970, 87033, 87161, 87549, 92417, 
93293, 94911, 97840 ],
    next:= [ 149, 691, 150, 43, 42, rec(
      desc:= [ 113011 ],
      fp:= [ 14, 212 ],
      next:= [ rec(
        desc:= [ 302004, 207002 ],
        fp:= [ 2, 12 ],
        next:= [ rec(
          desc:= [ 303007, 211003 ],
          fp:= [ 4, 14 ],
          next:= [ 498, 502 ] ), 497 ] ), 481 ] ), 154, rec(
      desc:= [ 120011 ],
      fp:= [ 16, 412 ],
      next:= [ 992, 935 ] ), 693, 703, rec(
      desc:= [ 113011 ],
      fp:= [ 14, 212 ],
      next:= [ rec(
        desc:= [ 302004, 303007 ],
        fp:= [ 2, 2501 ],
        next:= [ 58, rec(
          desc:= [ 211003 ],
          fp:= [ 4, 14 ],
          next:= [ 54, 55 ] ) ] ), 46 ] ), 986, rec(
      desc:= [ 305010 ],
      fp:= [ 242, 381 ],
      next:= [ rec(
        desc:= [ 302004, 302006, 209002 ],
        fp:= [ 1, 11 ],
        next:= [ 701, 702 ] ), rec(
        desc:= [ 119011 ],
        fp:= [ 4, 14 ],
        next:= [ rec(
          desc:= [ 302005, 209003 ],
          fp:= [ 1, 11 ],
          next:= [ 705, 704 ] ), 706 ] ) ] ), 501, 483, rec(
      fp:= [ 22041, 30337 ],
      next:= [ 157, 156 ] ), 41, rec(
      desc:= [ 113011 ],
      fp:= [ 14, 212 ],
      next:= [ rec(
        desc:= [ 302004, 303007 ],
        fp:= [ 2, 581 ],
        next:= [ 57, rec(
          desc:= [ 211003 ],
          fp:= [ 4, 14 ],
          next:= [ 53, 52 ] ) ] ), 45 ] ), rec(
      desc:= [ 111007 ],
      fp:= [ 16, 412 ],
      next:= [ rec(
        desc:= [ 302004, 207002 ],
        fp:= [ 2, 12 ],
        next:= [ 563, 562 ] ), 559 ] ), rec(
      desc:= [ 119011 ],
      fp:= [ 4, 14 ],
      next:= [ 696, 695 ] ), 700, 556, 993, 151, 560, 152, 991, 694, 692, 
480, rec(
      fp:= [ 74008, 86831 ],
      next:= [ 155, 159 ] ), 47, 467, rec(
      desc:= [ 302017 ],
      fp:= [ 681, 26421 ],
      next:= [ 997, rec(
        desc:= [ 108003 ],
        fp:= [ 4, 14 ],
        next:= [ 936, 939 ] ) ] ), 48, rec(
      desc:= [ 119011 ],
      fp:= [ 4, 14 ],
      next:= [ 698, 697 ] ), 486, 987, 934, rec(
      fp:= [ 47186, 54308 ],
      next:= [ 160, 158 ] ), 153, rec(
      fp:= [ 34572, 58101 ],
      next:= [ 554, 468 ] ), 699, 49, rec(
      desc:= [ 112007 ],
      fp:= [ 16, 412 ],
      next:= [ rec(
        desc:= [ 302004, 303007 ],
        fp:= [ 2, 901 ],
        next:= [ 56, rec(
          desc:= [ 211003 ],
          fp:= [ 4, 14 ],
          next:= [ 51, 50 ] ) ] ), 44 ] ), 553 ] ), rec(
    fp:= [ 5013, 5790, 6757, 15571, 16394, 20720, 24113, 25622, 30837, 33075, 
33754, 35046, 37845, 41535, 42056, 45337, 49881, 51585, 61011, 61139, 64589, 
74418, 74879, 78206, 80094, 84709, 92417, 94911, 96149 ],
    next:= [ 209, 208, 494, rec(
      fp:= [ 13425, 85628 ],
      next:= [ 752, 751 ] ), 212, rec(
      fp:= [ 71459, 79042 ],
      next:= [ 755, 756 ] ), 202, 988, 561, 207, 211, 564, 201, 754, 203, 
558, 922, 919, 490, rec(
      fp:= [ 54231, 68360, 83346 ],
      next:= [ 204, 205, 206 ] ), 493, rec(
      fp:= [ 48003, 59069 ],
      next:= [ 921, 995 ] ), rec(
      fp:= [ 65834, 98981 ],
      next:= [ 920, 994 ] ), 749, rec(
      fp:= [ 12000, 36524 ],
      next:= [ 557, 489 ] ), 989, 753, 210, 750 ] ) ] );
